--- a/src/scss/theme/_mobile-spacing--general.scss
+++ b/src/scss/theme/_mobile-spacing--general.scss
@@ -5,3 +5,12 @@
     margin-top: $mobile-modular-spacing-5; // down from 8rem to 50px
   }
 }
+
+// regular paragraphs in WYSIWYG
+.su-wysiwyg-text {
+  @include grid-media-max(sm) {
+    p {
+      margin-bottom: 2.2rem; // is 3.2rem on desktop
+    }
+  }
+}
